# lxveos

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CREDITS.md  LICENSE  README.md  RESPONSIBLE-USE.md  THIRD-PARTY-LICENSES.md  cyd_boards.json  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s3
.github/workflows/: build-matrix.yml
components/lxveos_arm/: CMakeLists.txt
components/lxveos_arm/include/: lxveos_arm.h
components/lxveos_arm/src/: lxveos_arm.c
components/lxveos_ble/: CMakeLists.txt
components/lxveos_ble/include/: lxveos_ble.h
components/lxveos_ble/src/: lxveos_ble.c  lxveos_ble_hid.c  lxveos_ble_hid_internal.h  lxveos_ble_internal.h  lxveos_ble_labels.c
components/lxveos_board/: CMakeLists.txt  idf_component.yml
components/lxveos_board/include/: lxveos_board.h  lxveos_board_panel.h
components/lxveos_board/include/bsp/: display.h  touch.h
components/lxveos_board/src/: lxveos_board.c  lxveos_board_panel.c
components/lxveos_caps/: CMakeLists.txt
components/lxveos_caps/include/: lxveos_caps.h  lxveos_ops.h
components/lxveos_caps/src/: lxveos_caps.c  lxveos_ops.c
components/lxveos_cfg/: CMakeLists.txt
components/lxveos_cfg/include/: lxveos_cfg.h
components/lxveos_cfg/src/: lxveos_cfg.c
components/lxveos_cli/: CMakeLists.txt
components/lxveos_cli/include/: lxveos_cli.h
components/lxveos_cli/src/: lxveos_cli.c
components/lxveos_cliutil/: CMakeLists.txt
components/lxveos_cliutil/include/: lxveos_cliutil.h
components/lxveos_cliutil/src/: lxveos_cliutil.c
components/lxveos_config/: CMakeLists.txt  Kconfig
components/lxveos_evilportal/: CMakeLists.txt
components/lxveos_evilportal/include/: lxveos_evilportal.h
components/lxveos_evilportal/src/: lxveos_evilportal.c
components/lxveos_evt/: CMakeLists.txt
components/lxveos_evt/include/: lxveos_evt.h
components/lxveos_evt/src/: lxveos_evt.c
components/lxveos_formenc/: CMakeLists.txt
components/lxveos_formenc/include/: lxveos_formenc.h
components/lxveos_formenc/src/: lxveos_formenc.c
components/lxveos_gui/: CMakeLists.txt  idf_component.yml
components/lxveos_gui/include/: lxveos_gui.h
components/lxveos_gui/src/: lxveos_gui.c  lxveos_gui_menu.c  lxveos_gui_menu.h
components/lxveos_hidmap/: CMakeLists.txt
components/lxveos_hidmap/include/: lxveos_hidmap.h
components/lxveos_hidmap/src/: lxveos_hidmap.c
components/lxveos_ir/: CMakeLists.txt
components/lxveos_ir/include/: lxveos_ir.h
components/lxveos_ir/src/: lxveos_ir.c  lxveos_ir_decode.c
components/lxveos_macro/: CMakeLists.txt
components/lxveos_macro/include/: lxveos_macro.h
components/lxveos_macro/src/: lxveos_macro.c
components/lxveos_monitor/: CMakeLists.txt
components/lxveos_monitor/include/: lxveos_monitor.h
components/lxveos_monitor/src/: lxveos_monitor.c
components/lxveos_nfc/: CMakeLists.txt
components/lxveos_nfc/include/: lxveos_nfc.h
components/lxveos_nfc/src/: lxveos_nfc.c
components/lxveos_nmea/: CMakeLists.txt
components/lxveos_nmea/include/: lxveos_nmea.h
components/lxveos_nmea/src/: lxveos_nmea.c
components/lxveos_nrf24/: CMakeLists.txt
components/lxveos_nrf24/include/: lxveos_nrf24.h
components/lxveos_nrf24/src/: lxveos_nrf24.c
components/lxveos_pcap/: CMakeLists.txt
components/lxveos_pcap/include/: lxveos_pcap.h
components/lxveos_pcap/src/: lxveos_pcap.c
components/lxveos_radiomath/: CMakeLists.txt
components/lxveos_radiomath/include/: lxveos_radiomath.h
components/lxveos_radiomath/src/: lxveos_radiomath.c
components/lxveos_spibus/: CMakeLists.txt
components/lxveos_spibus/include/: lxveos_spibus.h
components/lxveos_spibus/src/: lxveos_spibus.c  lxveos_spibus_policy.c
components/lxveos_subghz/: CMakeLists.txt
components/lxveos_subghz/include/: lxveos_subghz.h
components/lxveos_subghz/src/: lxveos_subghz.c
components/lxveos_wifi/: CMakeLists.txt
components/lxveos_wifi/include/: lxveos_wifi.h  lxveos_wifi_audit.h  lxveos_wifi_eapol.h  lxveos_wifi_essidmap.h
components/lxveos_wifi/src/: lxveos_wifi.c  lxveos_wifi_audit.c  lxveos_wifi_eapol.c  lxveos_wifi_essidmap.c  lxveos_wifi_labels.c
docs/: EVENT-PROTOCOL.md
main/: CMakeLists.txt  lxveos_main.c
partitions/: partitions_4mb_single.csv  partitions_8mb_ota.csv
scripts/: check_deps.py  expected_deps.txt  gen_board_configs.py  size_report.py
templates/portals/: README.md  netlogin.html  router_update.html  session_reauth.html  wifi_guest.html
tests/: test_board_configs.py  test_check_deps.py  test_size_report.py  test_source_consistency.py
tests/host_c/: run.sh  test_arm.c  test_ble_labels.c  test_board_panel.c  test_cfg.c  test_cliutil.c  test_evt.c  test_formenc.c  test_gui_menu.c  test_hidmap.c  test_ir_decode.c  test_macro.c  test_monitor.c  test_nmea.c  test_pcap.c  test_radiomath.c  test_spibus.c  test_wifi_analytics.c  test_wifi_eapol.c  test_wifi_essidmap.c  test_wifi_labels.c
tests/host_c/stubs/: esp_err.h  esp_log.h  esp_timer.h  esp_wifi_types.h  sdkconfig.h
